comecei a escrever conteudo

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Cursos gratis</h1>
         </header>
         <article>
-            <h1>Artigo 001</h1>
-            <p>Texto artigo 001</p>
+            <h1>Curso de HTML5 com CSS3</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa facere aut nostrum, illum deleniti placeat quod porro. Error, ad soluta aperiam ipsa officiis cupiditate similique, blanditiis at voluptas placeat iste aut repellat delectus! Ipsa quo quisquam deleniti velit voluptate fugit delectus molestiae cumque nostrum, possimus, qui perferendis minus. Impedit quidem fugit facere cupiditate. Aperiam voluptas quia sapiente totam dolorem officia.</p>
         </article>
         <article>
-        <h2>Artigo 002</h2>
-        <p>Texto artigo 002</p>
+        <h2>Curso de JavaScript</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi, eius dolore? Laudantium, ab. Iste corporis saepe delectus temporibus culpa voluptas exercitationem dolores, tempora minus necessitatibus aut minima quos molestias iusto soluta sapiente qui ducimus placeat quaerat asperiores! Facere doloremque nostrum dicta accusamus officiis atque fugit temporibus molestias aspernatur tempora, ut obcaecati cumque nobis in harum laboriosam inventore quasi! Voluptatum, qui.</p>
         </article>
     </main>
 </body>
