--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="Author" content="Zaqueu de Aquino Carvalho Menezes">
     <meta name="Keywords" content="HTML">
     <title>Titulo do site</title>
+    <link rel="stylesheet" href="estilo/style.css">
+    <style>
+
+    </style>
 </head>
 <body>
     <main>
