--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="Description" content="branchs">
     <meta name="Author" content="Zaqueu de Aquino Carvalho Menezes">
     <meta name="Keywords" content="HTML">
-    <title>Titulo do site</title>
+    <title>Site CursoeVideo</title>
 </head>
 <body>
     <main>
